# PE-ParsingTool

./: CMakeLists.txt  LICENSE.txt  PE ParsingTool.sln  PE ParsingTool.vcxproj  PE ParsingTool.vcxproj.filters  PE_ParsingTool.rc  RCa20168  README.en.md  README.md  api.cpp  api.h  custom_message.h  database.cpp  database.h  diagnostic_codes.h  diagnostic_helpers.cpp  main.cpp  matching.h  peanalyzer.cpp  peanalyzer.h  resource.h  resource.rc  translator.cpp  translator.h  winmain.cpp  设计方案.docx
cli/cli_include/: functions.h
cli/cli_src/: functions.cpp  main_cli.cpp
cli/src/: main_cli.cpp
core/core_include/: api.h  database.h  diagnostic_codes.h  peanalyzer.h  recheck.h  recheck_data.h  utf8_filesystem.h
core/core_src/: api.cpp  database.cpp  peanalyzer.cpp  recheck.cpp  recheck_data.cpp
gui/gui_include/: custom_window.h  translator.h  utils.h
gui/gui_src/: translator.cpp  utils.cpp  winmain.cpp
